# albion-streamlit

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: db.py  helpers.py  main.py
src/components/: home.py
src/components/settings/: cities.py  items.py
src/helpers/: widget.py
src/logging_configs/: stdout.json
src/pages/settings/: cities.py  preferences.py
src/views/: home.py
src/views/settings/: cities.py  items.py  preferences.py
