[tool.poetry]
name = "albion-streamlit"
version = "0.1.0"
description = ""
authors = ["Tomasz Marchlewski <marchlewski.tomasz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.37.1"
httpx = "^0.27.0"
motor = "^3.5.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E501",  # line-length check
    "UP",    # pyupgrade: https://github.com/asottile/pyupgrade
    "E",     # pycodestyle
    "F",     # Pyflakes
    "B",     # flake8-bugbear
    "I",     # isort
    "SIM",   # flake8-simplify
]
